Tighten AI response and stability boundaries